--- a/app/src/main/res/menu/menu_todo_options.xml
+++ b/app/src/main/res/menu/menu_todo_options.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_move"
-        android:icon="@android:drawable/ic_menu_share"
-        android:title="Move to" />
-    <item
         android:id="@+id/action_delete"
-        android:icon="@android:drawable/ic_menu_delete"
         android:title="Delete" />
+    <item
+        android:id="@+id/action_move_to"
+        android:title="Move To" />
 </menu>
