--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.TodooApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Set system bar colors -->
+        <item name="android:statusBarColor">#f7f7f7</item>
+        <item name="android:navigationBarColor">#f7f7f7</item>
     </style>
 
     <style name="Theme.TodooApp" parent="Base.Theme.TodooApp" />
