--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,17 @@
         <item name="android:overlapAnchor">true</item>
     </style>
 
+    <style name="SortDropdownStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:popupBackground">@android:color/white</item>
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <item name="android:dropDownVerticalOffset">0dp</item>
+    </style>
+
     <style name="CustomMenuTheme" parent="Theme.AppCompat.Light">
         <item name="popupMenuStyle">@style/CustomPopupMenuStyle</item>
+    </style>
+
+    <style name="CustomDropdownTheme" parent="Theme.AppCompat.Light">
+        <item name="popupMenuStyle">@style/SortDropdownStyle</item>
     </style>
 </resources>
