--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
     <style name="CustomDropdownTheme" parent="Theme.AppCompat.Light">
         <item name="popupMenuStyle">@style/SortDropdownStyle</item>
     </style>
+
+    <style name="WhiteAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="colorSurface">@android:color/white</item>
+    </style>
 </resources>
