feat: Add pinning functionality for todos and update related UI components

--- a/app/src/main/res/layout/fragment_category_management.xml
+++ b/app/src/main/res/layout/fragment_category_management.xml
@@ -92,7 +92,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
-        tools:listitem="@layout/category_list_item" />
+        tools:listitem="@layout/item_category" />
 
     <LinearLayout
         android:id="@+id/bottomBar"
