--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -295,6 +295,7 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/action_pin_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pin"
