--- a/app/src/main/res/layout/fragment_todo_form.xml
+++ b/app/src/main/res/layout/fragment_todo_form.xml
@@ -58,6 +58,74 @@
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/btnBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Background"
+                android:text="&#xf553;"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Share"
+                android:text="&#xf08e;"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/btnSave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Redo"
+                android:text="&#xf00c;"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/btnRedo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Redo"
+                android:text="&#xf2f9;"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/btnUndo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/back_button_ripple"
+                android:fontFamily="@font/fa_free_solid_400"
+                android:contentDescription="Redo"
+                android:text="&#xf2ea;"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:visibility="gone"/>
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -75,6 +143,42 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
+    <LinearLayout
+        android:id="@+id/infoLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/etTitle">
+
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/google_sans"
+            android:textColor="#9E9E9E"
+            android:textSize="12sp"
+            tools:text="Created: Jan 1, 2023" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  |  "
+            android:fontFamily="@font/google_sans"
+            android:textColor="#9E9E9E"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/google_sans"
+            android:textColor="#9E9E9E"
+            android:textSize="12sp"
+            tools:text="69 characters" />
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/etContent"
         android:layout_width="match_parent"
@@ -85,9 +189,9 @@
         android:background="@null"
         android:fontFamily="@font/google_sans"
         android:gravity="top|start"
-        android:hint="Content"
+        android:hint="Start typing"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/infoLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
