feat: Add reminder functionality and widget support
- Added permissions for scheduling alarms and posting notifications in AndroidManifest.xml.
- Implemented ReminderReceiver to handle alarm triggers and show notifications.
- Created ReminderHelper class to manage scheduling and canceling reminders.
- Updated Todo model to include reminder time and status.
- Enhanced TodoViewModel to support reminder scheduling and widget updates.
- Developed TodoWidget and TodoWidgetService to display active todos in a widget.
- Added layouts for small, medium, and large widget sizes.
- Implemented reminder dialog in TodoFormFragment for setting reminders.
- Updated menu options to include reminder actions.
- Added string resources for better localization.
- Created XML for widget configuration.

--- a/app/src/main/res/menu/menu_todo_options.xml
+++ b/app/src/main/res/menu/menu_todo_options.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_reminder"
-        android:title="@string/app_name" />
+        android:title="@string/action_reminder" />
     <item
         android:id="@+id/action_hide"
-        android:title="Hide" />
+        android:title="@string/action_hide" />
     <item
         android:id="@+id/action_place_home_screen"
-        android:title="Place on Home Screen" />
+        android:title="@string/action_home_screen" />
     <item
         android:id="@+id/action_move_to"
-        android:title="Move To" />
+        android:title="@string/action_move" />
     <item
         android:id="@+id/action_delete"
-        android:title="Delete" />
+        android:title="@string/action_delete" />
 
 </menu>
